test arm64 containers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
     steps:
       - name: AWS Hosted Runners
         id: aws_hosted_runners
-        uses: cppalliance/aws-hosted-runners@v1.0.0
+        # uses: cppalliance/aws-hosted-runners@v1.0.0
+        uses: samd2/aws-hosted-runners@v1.0.0arm64
 
   build:
     defaults:
